add use example code

--- a/PayDemo/Info.plist
+++ b/PayDemo/Info.plist
@@ -54,7 +54,7 @@
 		<string>uppaywallet</string>
 		<string>uppayx1</string>
 		<string>uppayx2</string>
-		<string>ippayx3</string>
+		<string>uppayx3</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
